<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.calculadora.TelaInicialActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/escolha"
        android:text="@string/escolha"
        android:textSize="50px"
        android:textAlignment="center"
        android:layout_marginTop="70px"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/escolha"
        android:layout_marginTop="30px"
        android:layout_marginLeft="150px">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btTradicional"
            android:text="@string/tradicional"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btCientifica"
            android:text="@string/cientifica"/>

    </LinearLayout>
</RelativeLayout>
